--- a/style.css
+++ b/style.css
@@ -27,10 +27,13 @@ body{
     display: flex;
     gap: 30px;    
 }
-.Nav_items li{
+.Nav_items li a{
     padding: 10px;
+    text-decoration: none;
+    color: black;
 }
-.Nav_items li:hover{
+
+.Nav_items li a:hover{
     background-color: #3B62FF;
     color: white;
     border-radius: 3px;
@@ -50,7 +53,6 @@ body{
     justify-content: center;
     align-items: center;
 }
-
 
 .Hero{
     color: white;
@@ -75,7 +77,7 @@ body{
 /*--------------About Section ------------*/
 
 .About{
-    padding: 50px 20px;
+    padding: 50px 20px 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -107,7 +109,6 @@ body{
     color: black;
 
 }
-
 .fa-linkedin{
     font-size: 40px;
     background-color:  white;
@@ -118,17 +119,27 @@ body{
 
 
 .Skills{
-    /* border: 2px solid black; */
+    /* background-color: #fcfce4; */
     display: flex;
-    justify-content: center;
-    padding: 60px;
+    justify-content: space-evenly;
+    gap: 20px;
+    padding: 70px 0px;
     flex-wrap: wrap;
+}
+.title-skill{
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 .skill-block{
-    /* border: 1px solid black; */
-    /* width: 60%; */
-
+    /* border: 1px solid black;
+    width: 60%; */
+    background-color: whitesmoke;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    border-radius: 3px;
 }
 .skill-block h1{
     text-align: center;
@@ -138,25 +149,26 @@ body{
     grid-template-columns: repeat(3,1fr);
     /* border: 1px solid red; */
     justify-items: center;
-    padding: 50px;
-
-
+    padding: 30px;
 }
 .skill-item{
     /* border: 1px solid black; */
     padding: 10px;
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
 }
 .skill-item img{
     width: 100%;
 }
 
+.skill-item img:hover{
+    scale: 1.2;
+}
 .backend{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     justify-items: center;
-    padding: 50px;
+    padding: 30px;
 }
 
 
@@ -164,15 +176,15 @@ body{
 
 .projects{
     /* border: 2px solid blue; */
-    padding: 30px;
+    padding: 50px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 
 }
 .projects h1{
     text-align: center;
+    font-size: 2rem;
 }
 .project-section{
     /* border: 1px solid black; */
@@ -183,15 +195,15 @@ body{
     gap: 20px;
     padding: 20px;
 }
-
 .project-item{
     width: 300px;
     /* border: 1px solid black; */
     padding: 20px;
 }
-
 .project-item:hover{
-    background-color: #BFCFE7;
+    box-shadow: rgba(50, 50, 105, 0.15) 1px 4px 5px 1px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+    border-radius: 6px;
+    
 }
 
 .project-item img{
@@ -203,7 +215,6 @@ body{
     justify-content: center;
     padding: 10px 0px;
 }
-
 .project-page{
     background-color: #3B62FF;
     color: white;
@@ -223,7 +234,6 @@ body{
     color: black;
     font-size: 18px;
 }
-
 .fa-globe{
     font-size: 20px;
     padding: 10px;
@@ -232,7 +242,41 @@ body{
 }
 
 
+/*---------Contacts--------------*/
 
+.contacts{
+    background-color: #D1E9F6;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50PX 25px;
+}
+
+.contacts h1{
+    font-size: 2rem;
+}
+.contacts div{
+    /* border: 1px solid black; */
+    padding: 10px;
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.contacts input{
+    outline: none;
+    border: none;
+    padding: 10px;
+    width: 60%;
+}
+
+.contacts button{
+    background-color: #3B62FF;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+}
 
 
 
@@ -251,16 +295,83 @@ body{
 
     /*-----Hero------*/
     #particles-js{
-        height: 60vh;
+        height: 50vh;
     }
     .Hero-items h1{
-        font-size: 30px ;
+        font-size: 35px;
     }
     .Hero-items h2{
-        font-size: 25px;
+        font-size: 20px;
+    }
+    /*----About----*/
+    .About{
+        padding: 30px 20px  50px;
+    }
+    .About h1{
+        margin: 5px;
+        font-weight: bold;
+        width: 90%;
+    }
+    .About p{
+        width: 90%;
+        font-size: 13px;
+        text-align: left;
+    }
+    .About h4{
+        margin: 5px 0;
+    }
+    .explore{
+        padding: 10px 0;
+        justify-content: space-evenly;
+    }
+    
+    .fa-github{
+        font-size: 30px;
+    }
+    .fa-linkedin{
+        font-size: 30px;
     }
 
+    /*----Skills-----*/
+    .Skills{
+        padding: 50px 0;
+    }
+    .skill-block h1{
+        font-size: 20px;
+    }
+    .frontend, .backend{
+        padding: 20px;
+    }
+    .skill-item{
+        /* border: 1px solid black; */
+        padding: 10px;
+        height: 50px;
+        width: 50px;
+    }
 
+    /*-----Projects-----*/
+    .projects{
+        padding: 50px 0;
+    }
+    .project-section{
+        /* border: 1px solid black; */
+        width: 80%;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        justify-items: center;
+        gap: 10px;
+        padding: 10px;
+    }
+    .project-item{
+        width: 250px;
+        padding: 10px;
+    }
+    .project-item button a{
+        font-size: 14px;
+    }
+    .fa-glob{
+        font-size: 14px;
+    }
 
     
 }
