--- a/style.css
+++ b/style.css
@@ -161,8 +161,8 @@ body{
     width: 100%;
 }
 
-.skill-item img:hover{
-    scale: 2;
+.skill-item:hover{
+    scale: 1.5;
 }
 .backend{
     display: grid;
@@ -210,12 +210,12 @@ body{
     width: 100%;
     padding: 10px 0px;
 }
-.bb{
+.projects_page{
     display: flex;
     justify-content: center;
     padding: 10px 0px;
 }
-.project-page{
+.page_btn{
     background-color: #3B62FF;
     color: white;
     border: none;
@@ -223,6 +223,10 @@ body{
     margin-top: 20px;
     border-radius: 3px;
     font-weight: bold;
+}
+.page_btn a{
+    text-decoration: none;
+    color: white;
 }
 .project-item button{
     border: none;
@@ -375,3 +379,8 @@ body{
 
     
 }
+
+
+
+
+
